--- a/app/src/main/res/layout/activity_menu_base.xml
+++ b/app/src/main/res/layout/activity_menu_base.xml
@@ -220,7 +220,7 @@
         app:layout_constraintVertical_bias="0.108" />
 
     <EditText
-        android:id="@+id/editTextSize6"
+        android:id="@+id/editTextSize2"
         android:layout_width="68dp"
         android:layout_height="42dp"
         android:ems="10"
@@ -298,7 +298,7 @@
         app:layout_constraintVertical_bias="0.108" />
 
     <EditText
-        android:id="@+id/editTextname"
+        android:id="@+id/editTextname2"
         android:layout_width="177dp"
         android:layout_height="43dp"
         android:ems="10"
